--- a/src/Layout/Footer/Footer.module.scss
+++ b/src/Layout/Footer/Footer.module.scss
@@ -11,7 +11,7 @@
 	display: flex;
 	align-items: center;
 	& > p {
-		margin-left: calc(var(--index));
+		margin-inline-start: calc(var(--index));
 	}
 }
 .mainBox {
