--- a/src/pages/MainPage/ReviewsSection/ReviewsSection.module.scss
+++ b/src/pages/MainPage/ReviewsSection/ReviewsSection.module.scss
@@ -1,16 +1,14 @@
-.companyMembers {
+.reviewsSection {
 	min-height: 50vh;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
-.membersBox {
+
+.reviewsBox {
 	width: 80%;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-}
-.grid {
-	width: 100%;
 }
