todo: переписать company members section

--- a/src/pages/CompanyMembersPage/ui/CompanyMembersPage.module.scss
+++ b/src/pages/CompanyMembersPage/ui/CompanyMembersPage.module.scss
@@ -1,1 +1,7 @@
-.CompanyMembersPageWrapper {}
+.CompanyMembersPageWrapper {
+	min-height: 100vh;
+	background-color: var(--mainColor);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
