--- a/src/Layout/Footer/Footer.module.scss
+++ b/src/Layout/Footer/Footer.module.scss
@@ -14,8 +14,28 @@
 		margin-inline-start: calc(var(--index));
 	}
 }
+.FooterContainer {
+	max-width: 1600px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+}
 .mainBox {
 	height: 20vh;
 	color: var(--fontColorMain);
 	font-family: var(--mainFamily);
+}
+.link {
+	text-decoration: none;
+	color: var(--fontColorMain);
+	font-size: 1.4em;
+}
+.options {
+	display: flex;
+	flex-direction: row;
+}
+.optionsCol {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
