--- a/src/pages/CompanyMembersPage/ui/CompanyMembersPage.module.scss
+++ b/src/pages/CompanyMembersPage/ui/CompanyMembersPage.module.scss
@@ -2,6 +2,7 @@
 	min-height: 100vh;
 	background-color: var(--mainColor);
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
