--- a/src/pages/MainPage/ui/components/CooperationSchemeSection/Tabs/Tabs.module.scss
+++ b/src/pages/MainPage/ui/components/CooperationSchemeSection/Tabs/Tabs.module.scss
@@ -3,3 +3,31 @@
 	display: flex;
 	flex-direction: column;
 }
+.tabContainer {
+	border-top: solid var(--fontColorDark) 2px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+.tab {
+	display: flex;
+	margin: calc(var(--index));
+	font-family: var(--mainFamily);
+	font-size: calc(var(--index) * 1);
+	color: var(--fontColorDark);
+	cursor: pointer;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.tabText {
+	margin: calc(var(--index));
+	font-family: var(--mainFamily);
+	font-size: calc(var(--index) * 1);
+	color: var(--fontColorDark);
+}
+.heading {
+	margin-top: calc(var(--index) * 0.5);
+}
