--- a/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
+++ b/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
@@ -1,5 +1,18 @@
 .FavorsCarouselWrapper {
-	max-width: 1600px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 	margin: 0 auto;
+	max-width: 1600px;
+}
+.cardsContainer {
 	padding: 20px 0;
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+	overflow-x: hidden;
+}
+.arrow {
+	color: #fff;
+	font-size: 50px;
 }
