--- a/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
+++ b/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: var(--mainColor);
+	background-color: var(--main-color);
 }
 .innerBox {
 	height: 90%;
@@ -16,13 +16,13 @@
 }
 .heading {
 	display: flex;
-	font-family: var(--headingFamily);
+	font-family: var(--heading-family);
 	font-size: calc(var(--index) * 1.5);
-	color: var(--fontColorMain);
+	color: var(--font-color-main);
 }
 .description {
 	margin-top: calc(var(--index));
-	font-family: var(--mainFamily);
+	font-family: var(--main-family);
 	font-size: calc(var(--index) * 1);
-	color: var(--fontColorDark);
+	color: var(--font-color-dark);
 }
