--- a/archive/components/CompanyMembersSection/components/MemberCard/MemberCard.module.scss
+++ b/archive/components/CompanyMembersSection/components/MemberCard/MemberCard.module.scss
@@ -25,18 +25,18 @@
 	}
 	&Name {
 		margin-top: calc(var(--index) * 0.3);
-		font-family: var(--mainFamily);
-		color: var(--fontColorMain);
+		font-family: var(--main-family);
+		color: var(--font-color-main);
 		font-size: calc(var(--index));
 	}
 	&Post {
-		font-family: var(--mainFamily);
-		color: var(--fontColorMain);
+		font-family: var(--main-family);
+		color: var(--font-color-main);
 		font-size: calc(var(--index));
 	}
 	&Description {
-		font-family: var(--mainFamily);
-		color: var(--fontColorDark);
+		font-family: var(--main-family);
+		color: var(--font-color-dark);
 		font-size: calc(var(--index) * 0.85);
 	}
 }
