--- a/src/Layout/Header/Header.module.scss
+++ b/src/Layout/Header/Header.module.scss
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	background-color: var(--mainColor);
+	background-color: var(--main-color);
 	height: 10vh;
 }
 .nav {
@@ -30,13 +30,13 @@
 	background-repeat: no-repeat;
 }
 .description {
-	color: var(--fontColorMain);
-	font-family: var(--headingFamily);
+	color: var(--font-color-main);
+	font-family: var(--heading-family);
 	font-size: calc(var(--index) * 0.41);
 }
 
 .heading {
-	color: var(--fontColorMain);
-	font-family: var(--headingFamily);
+	color: var(--font-color-main);
+	font-family: var(--heading-family);
 	font-size: calc(var(--index) * 1);
 }
