--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -1,7 +1,7 @@
 .heading {
 	font-size: calc(var(--index) * 2);
-	font-family: var(--headingFamily);
-	color: var(--fontColorMain);
+	font-family: var(--heading-family);
+	color: var(--font-color-main);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
