--- a/src/pages/MainPage/ui/components/AboutSection/AboutSection.module.scss
+++ b/src/pages/MainPage/ui/components/AboutSection/AboutSection.module.scss
@@ -1,7 +1,7 @@
 .aboutSection {
 	height: calc(var(--index) * 25);
 	width: 100%;
-	background-color: var(--mainColor);
+	background-color: var(--main-color);
 	// background: linear-gradient(
 	// 	90deg,
 	// 	rgba(84, 96, 158, 1) 0%,
@@ -39,13 +39,13 @@
 }
 .heading {
 	display: flex;
-	font-family: var(--headingFamily);
-	font-size: calc(var(--index) * 1.5);
-	color: var(--fontColorMain);
+	font-family: var(--heading-family);
+	font-size: var(--font-size-l);
+	color: var(--font-color-main);
 }
 .description {
 	margin-top: calc(var(--index));
-	font-family: var(--mainFamily);
-	font-size: calc(var(--index) * 1);
-	color: var(--fontColorDark);
+	font-family: var(--main-family);
+	font-size: var(--font-size-m);
+	color: var(--font-color-dark);
 }
