--- a/src/pages/MainPage/ui/components/MainFavorsCarousel/Card/Card.module.scss
+++ b/src/pages/MainPage/ui/components/MainFavorsCarousel/Card/Card.module.scss
@@ -6,8 +6,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	color: var(--fontColorMain);
-	background-color: var(--mainColor);
+	color: var(--font-color-main);
+	background-color: var(--main-color);
 	border-radius: 10px;
 }
 .title {
