--- a/src/providers/router/AppRouter.module.scss
+++ b/src/providers/router/AppRouter.module.scss
@@ -1,7 +1,7 @@
 .Loader {
 	height: 100vh;
 	width: 100%;
-	background-color: var(--mainColor);
+	background-color: var(--main-color);
 	display: flex;
 	text-align: center;
 	justify-content: center;
