upd: favor cards

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
 	//Palette
 	--main-color: #171d3d;
 	--dark-color: #070d28;
-	--light-color: #54609e; //#68709E
+	--light-color: #54609e;
 	--super-light-color: #68709e;
 	--font-color-main: #ffffff;
 	--font-color-dark: #b3b3b3;
