--- a/src/pages/FavorPage/ui/FavorList/FavorCard/FavorCard.module.scss
+++ b/src/pages/FavorPage/ui/FavorList/FavorCard/FavorCard.module.scss
@@ -4,11 +4,19 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: space-between;
+	padding-top: 20px;
+	border-radius: 5px;
+	background-color: var(--font-color-main);
 
 	> * {
 		color: var(--font-color-main-inverted);
-		font-size: var(--font-size-s);
+		font-size: var(--font-size-m);
+		font-family: var(--main-family);
 	}
+}
+.descriptionItem {
+	font-size: var(--font-size-s);
 }
 .infoBtn {
 	width: 100%;
@@ -16,4 +24,10 @@
 	border: none;
 	color: var(--font-color-main);
 	font-size: var(--font-size-s);
+	height: 60px;
+
+	&:hover {
+		background-color: var(--light-color);
+		cursor: pointer;
+	}
 }
