--- a/src/Layout/Header/NavButton/NavButton.module.scss
+++ b/src/Layout/Header/NavButton/NavButton.module.scss
@@ -9,7 +9,7 @@
 	margin-left: calc(var(--index));
 
 	&:hover {
-		padding-bottom: 8px;
+		padding-top: 2px;
 		border-bottom: 2px solid var(--font-color-main); //theme?
 	}
 }
