--- a/src/providers/router/AppRouter.module.scss
+++ b/src/providers/router/AppRouter.module.scss
@@ -5,4 +5,7 @@
 	display: flex;
 	text-align: center;
 	justify-content: center;
+	color: var(--font-color-main);
+	font-family: var(--main-family);
+	font-size: var(--font-size-l);
 }
