--- a/src/pages/MainPage/ui/components/MainFavorsCarousel/Card/Card.module.scss
+++ b/src/pages/MainPage/ui/components/MainFavorsCarousel/Card/Card.module.scss
@@ -1,20 +1,29 @@
 .CardWrapper {
-	width: 250px;
+	width: 300px;
 	height: 400px;
 	box-sizing: border-box;
 	padding: 20px;
+	margin: 10px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	color: var(--fontColorMain);
 	background-color: var(--mainColor);
 	border-radius: 10px;
+	flex: 1 0 auto;
+	justify-content: space-between;
 }
 .title {
-
+	display: flex;
+	font-family: var(--mainFamily);
+	font-size: calc(var(--index) * 1.5);
+	color: var(--fontColorMain);
 }
 .text {
-
+	margin-top: calc(var(--index));
+	font-family: var(--mainFamily);
+	font-size: calc(var(--index) * 1);
+	color: var(--fontColorDark);
 }
 .img {
 	width: 100%;
