--- a/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
+++ b/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
@@ -1,19 +1,40 @@
-.FavorsCarouselWrapper {
+.carousel {
 	display: flex;
-	flex-direction: row;
 	align-items: center;
 	justify-content: center;
+	width: 960px;
 	margin: 0 auto;
-	max-width: 1600px;
+	flex-direction: column;
+	overflow: hidden;
+	background-color: var(--mainColor);
 }
-.cardsContainer {
-	padding: 20px 0;
+
+.button {
+	color: var(--fontColorMain);
+	font-size: 2rem;
+}
+
+.cards {
 	display: flex;
-	flex-direction: row;
-	gap: 20px;
-	overflow-x: hidden;
 }
-.arrow {
-	color: #fff;
-	font-size: 50px;
+
+@media (max-width: 600px) {
+	.carousel {
+		width: 320px;
+	}
+}
+@media (min-width: 600px) and (max-width: 900px) {
+	.carousel {
+		width: 640px;
+	}
+}
+@media (min-width: 900px) and (max-width: 1600px) {
+	.carousel {
+		width: 960px;
+	}
+}
+@media (min-width: 1600px) {
+	.carousel {
+		width: 1280px;
+	}
 }
