--- a/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
+++ b/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
@@ -1,16 +1,21 @@
+.carouselBox {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
 .carousel {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 960px;
-	margin: 0 auto;
+	margin: 0 20px;
 	flex-direction: column;
 	overflow: hidden;
-	background-color: var(--mainColor);
 }
 
 .button {
-	color: var(--fontColorMain);
+	color: var(--font-color-main);
 	font-size: 2rem;
 }
 
