--- a/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
+++ b/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
@@ -6,6 +6,9 @@
 	align-items: center;
 	background-color: var(--main-color);
 }
+.stepsBox {
+	width: 60%;
+}
 .innerBox {
 	height: 90%;
 	width: 90%;
