--- a/src/pages/ArticlePage/ui/components/ArticleList/ArticleCard/ArticleCard.module.scss
+++ b/src/pages/ArticlePage/ui/components/ArticleList/ArticleCard/ArticleCard.module.scss
@@ -12,10 +12,17 @@
 	cursor: pointer;
 }
 .title {
-	width: 75%;
+	width: 70%;
+}
+.fullDate {
+	width: 5%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 .date {
-	width: 5%;
+	font-weight: 900;
+	font-size: 1.5rem;
 }
 .preview {
 	width: 20%;
