--- a/src/pages/FavorPage/ui/FavorList/FavorList.module.scss
+++ b/src/pages/FavorPage/ui/FavorList/FavorList.module.scss
@@ -1,7 +1,7 @@
 .FavorListWrapper {
-	background-color: var(--dark-color);
 }
 .FavorList {
+	width: 90%;
 	max-width: 1600px;
 	padding: 20px;
 	margin: 0 auto;
