--- a/src/pages/ArticlePage/ui/ArticlePage.module.scss
+++ b/src/pages/ArticlePage/ui/ArticlePage.module.scss
@@ -1,8 +1,8 @@
 .ArticlesPageWrapper {
+	min-height: 67vh; // 10vh - header, 23vh - footer
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	background-color: var(--main-color);
 	margin: 0 auto;
