--- a/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
+++ b/src/pages/MainPage/ui/components/MainFavorsCarousel/MainFavorsCarousel.module.scss
@@ -22,17 +22,17 @@
 	display: flex;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 900px) {
 	.carousel {
 		width: 320px;
 	}
 }
-@media (min-width: 600px) and (max-width: 900px) {
+@media (min-width: 900px) and (max-width: 1400px) {
 	.carousel {
 		width: 640px;
 	}
 }
-@media (min-width: 900px) and (max-width: 1600px) {
+@media (min-width: 1400px) {
 	.carousel {
 		width: 960px;
 	}
