--- a/src/pages/MainPage/ui/components/HeroSection/HeroSection.module.scss
+++ b/src/pages/MainPage/ui/components/HeroSection/HeroSection.module.scss
@@ -1,5 +1,5 @@
 .heroSection {
-	height: calc(var(--index) * 25);
+	height: 60vh;
 }
 .slide {
 	animation: slowScroll 5s linear infinite forwards alternate;
