--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 	--index: calc(1vh + 1vw);
 
 	//Palette
+	--contrast-color-main: #ac9250;
+	--contrast-color-dark: #59471a;
 	--main-color: #171d3d;
 	--dark-color: #070d28;
 	--light-color: #54609e;
