--- a/src/pages/ArticlePage/ui/ArticlePage.module.scss
+++ b/src/pages/ArticlePage/ui/ArticlePage.module.scss
@@ -4,6 +4,6 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: var(--main-color);
+	background-color: var(--dark-color);
 	margin: 0 auto;
 }
