--- a/src/pages/ArticlePage/ui/components/ArticleList/ArticleCard/ArticleCard.module.scss
+++ b/src/pages/ArticlePage/ui/components/ArticleList/ArticleCard/ArticleCard.module.scss
@@ -1,10 +1,10 @@
 .ArticleCardWrapper {
 	box-sizing: border-box;
-	padding: 20px;
+	padding: calc(var(--index) * 0.6);
 	width: 100%;
 	list-style: none;
-	background-color: var(--font-color-main);
-	border-radius: 5px;
+	background-color: var(--main-color);
+	border-radius: 10px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -12,18 +12,30 @@
 	cursor: pointer;
 }
 .title {
-	width: 70%;
+	width: 67%;
+	font-family: var(--main-family);
+	color: var(--font-color-main);
+	font-size: var(--font-size-m);
 }
 .fullDate {
-	width: 5%;
+	width: 8%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	padding: calc(var(--index));
 }
 .date {
+	font-family: var(--main-family);
+	color: var(--font-color-main);
 	font-weight: 900;
-	font-size: 1.5rem;
+	font-size: var(--font-size-l);
+}
+.month {
+	font-family: var(--main-family);
+	color: var(--font-color-dark);
+	font-size: var(--font-size-s);
 }
 .preview {
+	border-radius: 10px;
 	width: 20%;
 }
