--- a/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
+++ b/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
@@ -7,12 +7,6 @@
 	background-color: var(--main-color);
 	flex-direction: column;
 }
-.divider {
-	margin: 1rem 0;
-	width: 6rem;
-	height: 0.4rem;
-	background-color: var(--font-color-main);
-}
 .stepsBox {
 	width: 60%;
 }
@@ -41,10 +35,13 @@
 	height: calc(var(--index) * 2.5);
 	border-radius: 10px;
 	border: none;
-	background-color: #ac9250;
+	background-color: var(--contrast-color-main);
 	font-family: var(--main-family);
 	font-size: var(--font-size-m);
 	color: var(--font-color-main);
 	cursor: pointer;
 	margin-top: calc(var(--index) * 1.5);
+}
+.callUsButton:hover {
+	background-color: var(--contrast-color-dark);
 }
