--- a/src/Layout/Footer/Footer.module.scss
+++ b/src/Layout/Footer/Footer.module.scss
@@ -4,7 +4,7 @@
 	flex-direction: column;
 }
 .copyright {
-	height: 3vh;
+	min-height: 3vh;
 	color: var(--font-color-dark);
 	font-family: var(--main-family);
 	background-color: #000000;
