--- a/src/pages/MainPage/ui/components/AboutSection/AboutSection.module.scss
+++ b/src/pages/MainPage/ui/components/AboutSection/AboutSection.module.scss
@@ -1,17 +1,19 @@
 .aboutSection {
 	padding: calc(var(--index) * 2) 0;
-	height: calc(var(--index) * 25);
+	min-height: calc(var(--index) * 25);
 	width: 100%;
 	background-color: var(--dark-color);
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin-bottom: calc(var(--index) * 2);
 }
 .innerContainer {
 	height: 90%;
 	width: 90%;
 	display: flex;
 	flex-direction: row;
+	align-items: center;
 }
 .pictureBox {
 	display: flex;
@@ -21,11 +23,12 @@
 	justify-content: center;
 }
 .picture {
-	background-image: url(/src/assets/images/about.png);
-	height: 70%;
-	width: 75%;
+	background-image: url(/src/assets/images/large-icon.png);
+	height: calc(var(--index) * 20);
+	width: 100%;
 	background-size: contain;
 	background-repeat: no-repeat;
+	opacity: 0.3;
 }
 .textBox {
 	height: 100%;
@@ -45,4 +48,32 @@
 	font-family: var(--main-family);
 	font-size: var(--font-size-m);
 	color: var(--font-color-dark);
+}
+
+@media (max-width: 1000px) {
+	.pictureBox {
+		position: absolute;
+		display: flex;
+		height: 60%;
+		width: 60%;
+		align-items: center;
+		justify-content: center;
+		opacity: 0.1;
+	}
+	.innerContainer {
+		justify-content: center;
+		width: 100%;
+	}
+	.picture {
+		height: calc(var(--index) * 25);
+	}
+}
+
+@media (max-width: 700px) {
+	.textBox {
+		width: 80%;
+	}
+	.description {
+		font-size: var(--font-size-l);
+	}
 }
