--- a/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
+++ b/src/pages/MainPage/ui/components/CooperationSchemeSection/CooperationSchemeSection.module.scss
@@ -45,3 +45,9 @@
 .callUsButton:hover {
 	background-color: var(--contrast-color-dark);
 }
+
+@media (max-width: 700px) {
+	.stepsBox {
+		width: 90%;
+	}
+}
