--- a/src/Layout/Header/Header.module.scss
+++ b/src/Layout/Header/Header.module.scss
@@ -9,3 +9,19 @@
 .bigNav {
 	display: flex;
 }
+// .logoBox {
+// 	margin: 0 calc(var(--index));
+// 	display: flex;
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+// 	width: 20%;
+// 	height: 10vh;
+// 	align-items: center;
+// }
+
+@media (max-width: 1000px) {
+	.header {
+		justify-content: flex-start;
+	}
+}
