--- a/src/pages/AboutPage/ui/components/AdvantagesSection/AdvantagesSection.module.scss
+++ b/src/pages/AboutPage/ui/components/AdvantagesSection/AdvantagesSection.module.scss
@@ -1,9 +1,16 @@
 .AdvantagesSectionWrapper {
+	height: 50vh;
 }
 .AdvantagesContainer {
+	height: 90%;
 	max-width: 1600px;
 	margin: 0 auto;
 	display: flex;
-	font-display: row;
 	gap: 20px;
+	width: 90%;
+}
+.verticalDivider {
+	height: 100%;
+	width: 10px;
+	background-color: var(--font-color-main);
 }
