--- a/src/pages/AboutPage/ui/components/AdvantagesSection/AdvantagesSection.module.scss
+++ b/src/pages/AboutPage/ui/components/AdvantagesSection/AdvantagesSection.module.scss
@@ -1,13 +1,17 @@
 .AdvantagesSectionWrapper {
-	height: 50vh;
+	display: flex;
+	height: 60vh;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
 }
 .AdvantagesContainer {
-	height: 90%;
+	height: 70%;
 	max-width: 1600px;
 	margin: 0 auto;
 	display: flex;
 	gap: 20px;
-	width: 90%;
+	width: 80%;
 }
 .verticalDivider {
 	height: 100%;
