--- a/src/pages/MainPage/ui/components/CooperationSchemeSection/Tabs/Tabs.module.scss
+++ b/src/pages/MainPage/ui/components/CooperationSchemeSection/Tabs/Tabs.module.scss
@@ -24,12 +24,14 @@
 	align-items: center;
 	justify-content: center;
 	flex: 1;
+	transition: 0.3s;
 }
 .tab {
 	border-top: solid var(--font-color-dark) 2px;
 	color: var(--font-color-dark);
 }
 .selectedTab {
+	box-shadow: 0px -1px 0 0 var(--font-color-main);
 	border-top: solid var(--font-color-main) 2px;
 	color: var(--font-color-main);
 }
