--- a/src/Layout/FloatButton/FloatButton.module.scss
+++ b/src/Layout/FloatButton/FloatButton.module.scss
@@ -10,16 +10,18 @@
 	width: 55%;
 	height: 55%;
 	border-radius: 50%;
-	background-color: var(--contrast-color-main);
+	background-color: var(--contrast-color-dark);
 	border: none;
 	color: var(--font-color-main);
 	font-size: 2.5rem;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	transition: 0.5s;
 }
 .floatButton:hover {
-	background-color: var(--contrast-color-dark);
+	rotate: 360deg;
+	background-color: var(--contrast-color-main);
 }
 @media (max-width: 700px) {
 	.floatButtonContainer {
