--- a/src/Layout/Header/NavButton/NavButton.module.scss
+++ b/src/Layout/Header/NavButton/NavButton.module.scss
@@ -7,9 +7,10 @@
 	text-decoration: none;
 	align-items: center;
 	margin-left: calc(var(--index));
+	transition: 0.4s;
+	border-bottom: 2px solid rgba(0, 0, 0, 0);
 
 	&:hover {
-		padding-top: 2px;
-		border-bottom: 2px solid var(--font-color-main); //theme?
+		border-bottom: 2px solid var(--font-color-main);
 	}
 }
