--- a/src/pages/FavorPage/ui/FavorList/FavorCard/FavorCard.module.scss
+++ b/src/pages/FavorPage/ui/FavorList/FavorCard/FavorCard.module.scss
@@ -7,10 +7,16 @@
 	align-items: center;
 	justify-content: space-between;
 	padding-top: 20px;
-	background-color: var(--font-color-main);
+	background-color: var(--main-color);
+	// background-image: linear-gradient(
+	// 	135deg,
+	// 	var(--dark-color),
+	// 	var(--light-color)
+	// );
+	overflow: hidden;
 
 	> * {
-		color: var(--font-color-main-inverted);
+		color: var(--font-color-main);
 		font-size: var(--font-size-m);
 		font-family: var(--main-family);
 	}
@@ -20,14 +26,16 @@
 }
 .infoBtn {
 	width: 100%;
-	background-color: var(--dark-color);
 	border: none;
 	color: var(--font-color-main);
+	background-color: var(--contrast-color-dark);
 	font-size: var(--font-size-s);
 	height: 60px;
+	transition: 0.3s;
 
 	&:hover {
-		background-color: var(--light-color);
+		box-shadow: 0px -1px 12px 0px #000000;
+		background-color: var(--contrast-color-main);
 		cursor: pointer;
 	}
 }
