--- a/src/pages/FavorPage/ui/FavorList/FavorList.module.scss
+++ b/src/pages/FavorPage/ui/FavorList/FavorList.module.scss
@@ -1,8 +1,11 @@
 .FavorListWrapper {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	flex-direction: column;
 	min-height: 50vh;
+	background-color: var(--dark-color);
+	padding: calc(var(--index) * 2) 0;
 }
 .FavorListContainer {
 	width: 80%;
