fix: feedback form, section comp upd: backgrounds add: contacts page + css fix

--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -2,11 +2,13 @@
 	font-size: calc(var(--index) * 2);
 	font-family: var(--heading-family);
 	color: var(--font-color-main);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 	padding: 15px 0;
 }
 .Section {
+}
+.headingBox {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
