--- a/src/pages/MainPage/ui/components/CooperationSchemeSection/Tabs/Tabs.module.scss
+++ b/src/pages/MainPage/ui/components/CooperationSchemeSection/Tabs/Tabs.module.scss
@@ -31,7 +31,7 @@
 	color: var(--font-color-dark);
 }
 .selectedTab {
-	box-shadow: 0px -1px 0 0 var(--font-color-main);
+	// box-shadow: 0px -1px 0 0 var(--font-color-main);
 	border-top: solid var(--font-color-main) 2px;
 	color: var(--font-color-main);
 }
