--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -1,5 +1,17 @@
 .mainPage {
+	position: relative;
+	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	background-color: var(--main-color);
+}
+.background {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-image: url(/src/assets/images/background.png);
+	background-size: contain;
+	z-index: -1;
+	scale: 1.01;
+	filter: brightness(0.5) blur(1.5px);
 }
