--- a/src/pages/MainPage/ui/components/BenefitsSection/BenefitsSection.module.scss
+++ b/src/pages/MainPage/ui/components/BenefitsSection/BenefitsSection.module.scss
@@ -8,6 +8,7 @@
 	justify-content: center;
 	align-items: center;
 	margin-bottom: calc(var(--index) * 2);
+	filter: drop-shadow(2px 4px 6px #000);
 }
 .benefitsInnerBox {
 	width: 80%;
