add: progress bar fix: adapt to phone about, favors pages, css fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,8 +2,8 @@
 	--index: calc(1vh + 1vw);
 
 	//Palette
-	--contrast-color-main: #ac9250;
-	--contrast-color-dark: #59471a;
+	--contrast-color-main: #b06161; //#ac9250
+	--contrast-color-dark: #612727; //#59471a
 	--main-color: #171d3d;
 	--dark-color: #070d28;
 	--light-color: #54609e;
