--- a/src/Layout/Header/Header.module.scss
+++ b/src/Layout/Header/Header.module.scss
@@ -5,20 +5,11 @@
 	justify-content: center;
 	background-color: var(--main-color);
 	height: 10vh;
+	box-shadow: 0px 1px 20px 5px #000;
 }
 .bigNav {
 	display: flex;
 }
-// .logoBox {
-// 	margin: 0 calc(var(--index));
-// 	display: flex;
-// 	position: absolute;
-// 	top: 0;
-// 	left: 0;
-// 	width: 20%;
-// 	height: 10vh;
-// 	align-items: center;
-// }
 
 @media (max-width: 1000px) {
 	.header {
