--- a/src/components/ContactSection/ContactSection.module.scss
+++ b/src/components/ContactSection/ContactSection.module.scss
@@ -3,8 +3,7 @@
 }
 
 .ContactSectionWrapper {
-	// background-color: var(--main-color);
-	min-height: 67vh;
+	min-height: 50vh;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -48,4 +47,13 @@
 }
 .sendButton:hover {
 	background-color: var(--contrast-color-main);
+}
+.phoneAndEmail {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.group {
+	width: 48%;
 }
