--- a/src/pages/AboutPage/ui/components/ProjectsSection/ProjectsSection.module.scss
+++ b/src/pages/AboutPage/ui/components/ProjectsSection/ProjectsSection.module.scss
@@ -1,7 +1,9 @@
 .ProjectsSectionWrapper {
 	background-color: var(--dark-color);
+	filter: drop-shadow(2px 4px 6px #000);
 }
 .ProjectsSectionContainer {
+	padding: calc(var(--index));
 	min-height: 50vh;
 	max-width: 1600px;
 	margin: 0 auto;
@@ -16,26 +18,43 @@
 	font-family: var(--heading-family);
 }
 .content {
-	width: 80%;
+	width: 90%;
 	height: 100%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	position: relative;
 }
 .descriptionContainer {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	margin-inline-end: calc(var(--index));
 }
 .description {
 	font-size: var(--font-size-m);
-	color: var(--font-color-main);
+	color: var(--font-color-dark);
 	font-family: var(--main-family);
 	margin: calc(var(--index)) 0;
 }
 .preview {
-	width: 20%;
+	width: 40%;
+	opacity: 0.7;
 }
 .btnBox {
 	margin: 0 auto;
+}
+@media (max-width: 1000px) {
+	.content {
+		flex-direction: column;
+	}
+	.preview {
+		position: absolute;
+		top: 0;
+		left: 20%;
+		opacity: 0.2;
+		margin: 0 auto;
+		width: 60%;
+		z-index: -1;
+	}
 }
