--- a/src/pages/ContactPage/ui/ContactsPage.module.scss
+++ b/src/pages/ContactPage/ui/ContactsPage.module.scss
@@ -3,6 +3,8 @@
 	overflow: hidden;
 	display: flex;
 	flex-direction: row;
+	min-height: 67vh;
+	align-items: center;
 }
 .contactPageContainer {
 	width: 80%;
@@ -14,7 +16,6 @@
 	width: 100%;
 	height: 100%;
 	background-image: url(/src/assets/images/background.png);
-	background-size: contain;
 	z-index: -1;
 	filter: brightness(0.5) blur(1.5px);
 }
