--- a/src/pages/FavorPage/ui/FavorPage.module.scss
+++ b/src/pages/FavorPage/ui/FavorPage.module.scss
@@ -1,4 +1,15 @@
 .FavorPageWrapper {
 	background-color: var(--main-color);
 	min-height: 67vh; // 10vh - header, 23vh - footer
+	position: relative;
+	overflow: hidden;
+}
+.background {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-image: url(/src/assets/images/background.png);
+	z-index: -1;
+	scale: 1.01;
+	filter: brightness(0.5) blur(1.5px);
 }
