--- a/src/pages/ContactPage/ui/components/ContactsList/ContactsList.module.scss
+++ b/src/pages/ContactPage/ui/components/ContactsList/ContactsList.module.scss
@@ -12,3 +12,9 @@
 	flex-direction: column;
 	justify-content: center;
 }
+@media (max-width: 800px) {
+	.contactsBox,
+	.contactsInnerBox {
+		align-items: center;
+	}
+}
