--- a/src/pages/AboutPage/ui/components/CertificateSection/CertificateSection.module.scss
+++ b/src/pages/AboutPage/ui/components/CertificateSection/CertificateSection.module.scss
@@ -1,8 +1,8 @@
 .CertificateSectionWrapper {
-	height: 70vh;
+	min-height: 70vh;
 	background-color: var(--dark-color);
 	margin-top: calc(var(--index));
-	padding-top: calc(var(--index) * 2);
+	padding: calc(var(--index) * 2) 0;
 	filter: drop-shadow(2px 4px 6px #000);
 }
 .CertificatesContainer {
@@ -11,12 +11,14 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	gap: 20px;
 }
 .imageWrapper {
 	border-radius: 10px;
 	overflow: hidden;
 }
 .images {
+	width: 90%;
 	height: 100%;
 	max-width: 1600px;
 	margin: 0 auto;
@@ -31,9 +33,12 @@
 	color: var(--font-color-dark);
 	font-family: var(--main-family);
 }
-@media (max-width: 768px) {
-	.CertificatesContainer {
-		flex-direction: column;
-		align-items: center;
+@media (max-width: 1000px) {
+	.images {
+		gap: 0;
+	}
+	.imageWrapper {
+		border-radius: 0;
+		filter: drop-shadow(0px 0px 20px #000);
 	}
 }
