--- a/src/pages/ContactPage/ui/components/ContactsList/components/ContactItem/ContactItem.module.scss
+++ b/src/pages/ContactPage/ui/components/ContactsList/components/ContactItem/ContactItem.module.scss
@@ -22,3 +22,13 @@
 	text-transform: uppercase;
 	margin: calc(var(--index) * 0.6) 0;
 }
+@media (max-width: 800px) {
+	.contactItemBox {
+		text-align: center;
+	}
+	.text,
+	.heading,
+	.icon {
+		font-size: var(--font-size-l);
+	}
+}
