--- a/src/pages/AboutPage/ui/components/AdvantagesSection/AdvantagesSection.module.scss
+++ b/src/pages/AboutPage/ui/components/AdvantagesSection/AdvantagesSection.module.scss
@@ -1,6 +1,6 @@
 .AdvantagesSectionWrapper {
 	display: flex;
-	height: 60vh;
+	min-height: 60vh;
 	align-items: center;
 	flex-direction: column;
 	justify-content: center;
@@ -12,9 +12,15 @@
 	display: flex;
 	gap: 20px;
 	width: 80%;
+	justify-content: center;
 }
 .verticalDivider {
-	height: 100%;
 	width: 10px;
 	background-color: var(--font-color-main);
+}
+
+@media (max-width: 900px) {
+	.AdvantagesContainer {
+		flex-direction: column;
+	}
 }
