--- a/src/Layout/Footer/Footer.module.scss
+++ b/src/Layout/Footer/Footer.module.scss
@@ -5,7 +5,7 @@
 }
 .copyright {
 	min-height: 3vh;
-	color: var(--font-color-dark);
+	color: #fff;
 	font-family: var(--main-family);
 	background-color: #000000;
 	display: flex;
@@ -15,34 +15,76 @@
 	}
 }
 .FooterContainer {
+	width: calc(100vw - 6px);
 	max-width: 1600px;
 	margin: 0 auto;
+	padding: calc(var(--index)) 0;
 	display: flex;
 	justify-content: center;
 }
 .mainBox {
+	width: 80%;
 	display: flex;
 	min-height: 20vh;
-	color: var(--font-color-main);
+	color: #fff;
 	font-family: var(--main-family);
-	flex-direction: column;
+	flex-direction: row;
+	& > * {
+		flex: 1;
+	}
 }
-.link {
-	text-decoration: none;
-	color: var(--font-color-main);
+.colHeading {
+	color: #fff;
 	font-size: var(--font-size-m);
+	font-weight: bold;
+}
+.link,
+.contact,
+.option {
+	list-style-type: disc;
+	text-decoration: none;
+	color: var(--font-color-dark);
+	font-size: var(--font-size-s);
+}
+.outLink {
+	margin: calc(var(--index) * 0.5) calc(var(--index) * 0.3);
+	color: #fff;
+	font-size: var(--font-size-l);
+	display: inline-block;
+	cursor: pointer;
 }
 .options {
 	display: flex;
 	flex-direction: row;
 }
-.optionsCol {
+
+.optionsCol,
+.contactsCol {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	margin: calc(var(--index) * 0.5);
-
+	justify-content: flex-start;
 	> * {
+		margin: calc(var(--index) * 0.2);
+	}
+}
+
+.optionsCol {
+	& > * {
+		list-style: disc;
+		list-style-position: inside;
+	}
+}
+.contactsCol,
+.linksCol {
+	& > * {
 		list-style: none;
 	}
+}
+
+.divider {
+	border-radius: 7px;
+	width: 20%;
+	height: 4px;
+	background-color: var(--light-color);
+	margin: calc(var(--index) * 0.3);
 }
